# Log

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/Log-Test/: Log-Test.cbp  main.c
Src/: Log.h  LogConfig.h  LogUserConfigTemplate.h
